# kani-tts-2-vllm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  download_models.py  e2e_test.py  install.sh  make_voice.py  pyproject.toml  stress_test.py
kanitts2-vllm/: pyproject.toml
kanitts2-vllm/kanitts2_vllm/: __init__.py  config.py  model.py  positions.py  rope.py
tests/: conftest.py  test_chunking.py  test_health.py  test_speech.py  test_streaming.py  test_websocket.py
tts_server/: __init__.py  chunking.py  codec.py  config.py  engine.py  server.py  speakers.py  streaming.py  utils.py
tts_server/nanocodec/: __init__.py  decoder.py  loader.py  modules.py
tts_server/speakers/: adilet_ky.pt  aisulu_ky.pt  arjun_en.pt  bakyt_ky.pt  bermet_ky.pt  david_en.pt  john_en.pt  joseph_en.pt  linda_en.pt  mila_en.pt  robert_en.pt  speaker_1.pt  speaker_2.pt  speaker_3.pt  speaker_6.pt  speaker_7.pt  speaker_map.json
